[tool.poetry]
name = "youtube-analytics-project"
version = "0.1.0"
description = ""
authors = ["aigulbakieva <bakisha.a@mail.ru>"]
readme = "README.md"
packages = [{include = "youtube_analytics_project"}]

[tool.poetry.dependencies]
python = "^3.10"
isodate = "^0.6.1"
rdflib = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
